--- a/catalogue/templates/check.html
+++ b/catalogue/templates/check.html
@@ -1,4 +1,4 @@
-{%load static%}
+<!-- {%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +10,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
-  /* Make the image fully responsive */
+
   .carousel-inner img {
-    width: 40%;
-    height: 40%;
+    width: 20%;
+    height: 20%;
   }
   
   body{
@@ -62,12 +62,31 @@
         <p> {{ product.description }} </p>
       </div>   
     </div>
+
+    <div class="carousel-item">
+      <img  src="{% static 'images/water.jpg' %}"alt="Pineapples" width="500" height="500"/>
+    <div class="carousel-caption">
+      <p>{{ product.title }} {{product.kiosk.currency}} 
+          <br>
+          {{product.selling_price}}
+      <p> {{ product.description }} </p>
+    </div>   
+  </div>
+  <div class="carousel-item">
+    <img  src="{% static 'images/apple2.jpg' %}"alt="Pineapples" width="500" height="500"/>
+  <div class="carousel-caption">
+    <p>{{ product.title }} {{product.kiosk.currency}} 
+        <br>
+        {{product.selling_price}}
+    <p> {{ product.description }} </p>
+  </div>   
+</div>
   </div>
   <a class="carousel-control-prev" href="#demo" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
+  <a class="carousel-control-next" href="#Groceries" data-slide="next">
 
   </body>
   </html>
-  
+   -->
